--- a/public/app/plugins/panel/pluginlist/module.html
+++ b/public/app/plugins/panel/pluginlist/module.html
@@ -11,21 +11,21 @@
           <span class="pluginlist-version">v{{plugin.info.version}}</span>
         </span>
         <span ng-if="ctrl.isAdmin">
-          <span class="pluginlist-message pluginlist-message--update" ng-show="plugin.hasUpdate" ng-click="ctrl.updateAvailable(plugin, $event)" bs-tooltip="'New version: ' + plugin.latestVersion">
-            Update available!
+          <span class="pluginlist-message pluginlist-message--update" ng-show="plugin.hasUpdate" ng-click="ctrl.updateAvailable(plugin, $event)" bs-tooltip="'新版本: ' + plugin.latestVersion">
+            有可用更新!
           </span>
           <span class="pluginlist-message pluginlist-message--enable" ng-show="!plugin.enabled && !plugin.hasUpdate">
-            Enable now
+            立即启用
           </span>
           <span class="pluginlist-message pluginlist-message--no-update" ng-show="plugin.enabled && !plugin.hasUpdate">
-            Up to date
+            最新
           </span>
         </span>
       </a>
     </div>
     <div class="pluginlist-item" ng-show="category.list.length === 0">
       <a class="pluginlist-link pluginlist-link-{{plugin.state}}" href="https://grafana.com/plugins">
-        <span class="pluginlist-none-installed">None installed. <span class="pluginlist-emphasis">Browse Grafana.com</span></span>
+        <span class="pluginlist-none-installed">未安装。<span class="pluginlist-emphasis">浏览 Grafana.com</span></span>
       </a>
     </div>
   </div>
